Small improvements to the playbook

--- a/roles/prometheus/handlers/main.yml
+++ b/roles/prometheus/handlers/main.yml
@@ -1,4 +1,10 @@
+---
 - name: restart prometheus
-  service:
+  systemd:
     name: prometheus
     state: restarted
+
+- name: reload prometheus
+  systemd:
+    name: prometheus
+    state: reloaded
