--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -1,44 +1,39 @@
-- name: Check if prometheus already exists in directory
-  stat:
-    path: "{{ prometheus_dir }}/prometheus"
-  register: result
-
+---
 - name: create prometheus system group
   group:
     name: prometheus
     system: true
-    state: present
 
 - name: create prometheus system user
   user:
     name: prometheus
     system: true
-    shell: "/usr/sbin/nologin"
+    shell: '/usr/sbin/nologin'
     group: prometheus
     createhome: false
-    home: "{{ prometheus_dir }}"
+    home: '{{ prometheus_dir }}'
 
-- name: create prometheus data and config directory
+- name: create prometheus data directory
   file:
-    path: "{{ item }}"
+    path: '{{ item }}'
     state: directory
     owner: prometheus
     group: prometheus
     mode: 0755
   with_items:
-    - "{{ prometheus_dir }}"
-    - "{{ prometheus_data_dir }}"
+    - '{{ prometheus_dir }}'
+    - '{{ prometheus_data_dir }}'
 
 - name: Download and untar prometheus
-  ansible.builtin.unarchive:
-    src: "{{ download_url }}"
-    dest: "{{ prometheus_dir }}"
+  unarchive:
+    src: '{{ download_url }}'
+    dest: '{{ prometheus_dir }}'
     remote_src: yes
     owner: prometheus
     group: prometheus
     extra_opts:
     - --strip-components=1
-  when: not result.stat.exists
+    creates: '{{ prometheus_dir }}/prometheus'
 
 - name: Create systemd service unit
   template:
@@ -51,11 +46,12 @@
 - name: Template prometheus.yml config file
   template:
     src: prometheus.yml.j2
-    dest: "{{ prometheus_dir }}/prometheus.yml"
+    dest: '{{ prometheus_dir }}/prometheus.yml'
     owner: prometheus
     group: prometheus
+    mode: 0640
   notify:
-    - restart prometheus
+    - reload prometheus
 
 - name: Ensure prometheus service is started and enabled
   systemd:
